# neural-sheaf

./: .gitignore  README.md  generate_appendix_figures.py  generate_figures.py  pyproject.toml  quickstart.py
Notebooks/: 01_inference.ipynb  03_spectral.ipynb  04_discord.ipynb
neural_sheaf/: __init__.py  activations.py  baseline.py  datasets.py  discord.py  dynamics.py  losses.py  pinning.py  sheaf.py  spectral.py  tasks.py  trainer.py  visualization.py
