[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-sheaf"
version = "0.1.1"
description = "Neural networks as cellular sheaves — inference via heat equation dynamics, training via joint stalk/weight dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Vicente Bosca" },
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
interactive = ["plotly>=5.0"]
notebooks = ["jupyter", "plotly>=5.0"]
dev = ["pytest", "jupyter", "plotly>=5.0"]

[project.urls]
Repository = "https://github.com/vicenbosca/neural-sheaf"

[tool.setuptools.packages.find]
include = ["neural_sheaf*"]